<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        style="@style/TextViewSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/simulate_crash" />

    <LinearLayout
        android:id="@+id/crash_in_conversation_list_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="vertical"
        android:paddingTop="18dp"
        android:paddingBottom="18dp">

        <TextView
            style="@style/TextViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crash_in_conversation_list_fragment" />

        <TextView
            style="@style/TextViewSubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="false"
            android:text="@string/crash_in_conversation_list_fragment_description" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/crash_in_chat_client_cpp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="vertical"
        android:paddingTop="18dp"
        android:paddingBottom="18dp">

        <TextView
            style="@style/TextViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crash_in_chat_client_cpp" />

        <TextView
            style="@style/TextViewSubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="false"
            android:text="@string/crash_in_chat_client_cpp_description" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/crash_in_tm_client_cpp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="vertical"
        android:paddingTop="18dp"
        android:paddingBottom="18dp">

        <TextView
            style="@style/TextViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crash_in_tm_client_cpp" />

        <TextView
            style="@style/TextViewSubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="false"
            android:text="@string/crash_in_tm_client_cpp_description" />

    </LinearLayout>

</LinearLayout>
