<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dialog_background"
    android:elevation="5dp"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/remove_conversation_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/remove_conversation_title"
            style="@style/TextViewTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/remove_conversation_button" />

        <Button
            android:id="@+id/leave_conversation_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/leave_conversation"
            android:elevation="5dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/remove_conversation_button"
            app:layout_constraintBottom_toBottomOf="parent" />

        <Button
            android:id="@+id/remove_conversation_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/remove_conversation"
            android:elevation="5dp"
            android:layout_marginStart="4dp"
            app:layout_constraintStart_toEndOf="@id/leave_conversation_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
